MooNode working OK

--- a/Book-Advanced_Perl-Cozens/Notes-Advanced_Perl-Cozens.org
+++ b/Book-Advanced_Perl-Cozens/Notes-Advanced_Perl-Cozens.org
@@ -16,3 +16,6 @@ Book - Advanced Perl, 2nd Ed, O'Reilly
     + Uses Text::Balanced
   + 
 
+* Chapter 3 - Templating
+* Chapter 4 - Objects, Databases, Applications
+
