--- a/Project-Ebook/Notes-Book.org
+++ b/Project-Ebook/Notes-Book.org
@@ -1,20 +1,33 @@
 
 
 * ToDo
+** Bug Fix Lib Genesis
+   + Handle ( space date, publisher)
+   + Rename Microsoft (Azure | Excel | etc)
+   + 
+
+
+** Parse lib genesis xls file
+
+
 ** Finish MooFile
    + Tests
-   + Finish simple apps
-     + Command line args
-   + Scan files - fix-up  (1) copies
-   + Make check file a single function   
    + Implement tree search
    + Mac labels
    + Rename File
 
+
+
+** Existing Annoyances
+   + Restructure code - move publisher into separate file
+   + Look at smarter parsin filename - maybe use nested regexp lib to fix nested problems?
+   + More robust date parsing
+   + Make general and lib one program
+   
+
 * Ideas
   + Read genessis-lib file
   + 
-
 
 * Use cases
 ** DONE Find dupe file in a dir 
@@ -30,12 +43,35 @@
 
 
 Find
+
 * rewrite - dir, tree - use 
 * use Dir, Node, Collection to build tree
 * check file names, check duplicates
 
 Collection
 * better sore, delete
+* Reccomened Book
+  + Search for book by title
+  + Have "shelf list" - books can have multiple dewey decimal, category - not just one category
+    + May Amazon Category to dewey? LOC?
+  + need to categorize book by expert, begineer
+  + By contrib. or written
+  + Quality of publisher
+  + Type - pdf or other
+  + Watermark or Not
+  + Also use text similarity to compar
+e to other books
+    + Description
+    + Full text
+  + How Good - recommendations
+    + Amazon
+    + Good reads
+    + Other? - other recommendations? Number times mentioned on web? Citations? Quality author? Quality publisher?
+  + Length?
+  + Writing level?
+  + Use social recommendations..
+    + From amazon, good reads, etc
+
 * write cold load & update
 * index by node, size, md5.
 
@@ -61,6 +97,171 @@ Collection
 
 + rewrite check file names,  rename
 
+* Book Downloader
+  + replace using Jdownloader
+  + plug-in for download books from different web sites
+  + Download book and use more intelligent information for author, isbn, etc.
+  + Smarter - knows how big files are
+  + Can result in consistent filename
+* Book Database Web Scrape
+  + Build database from all web sites
+  + ON regular basises scape sites and colect new books
+  + RSS feeds for new books
+  + Use torrent RSS feed
+  + Update database with new books
+  + Lookup and do better classification on basic book info
+  + part of dataflow pipelines
+    1. Add book
+    2. Check if already have book - link up
+    3. Add more data
+    4. Decide if I would like book
+    5. Download - maybe - fill in things like md5? watermark? truePDF? Correct name / isbn?
+    6. OCR  -mybe
+    7. Check book content - compare to others
+  + better version dlfeb?
+    + Make money ads
+    + make money sign up
+    + make money from hosting site
+    + make money doing takedown for book publishers
+    + 
+** Book Sites Info
+*** All IT Ebooks[[http://www.allitebooks.com/the-elements-of-content-strategy/]]
+    + Data
+      + Title
+      + Subtitle
+      + Author - Links to other books by author
+      + ISBN-10 (but also 13)
+      + Year
+      + Pages
+      + Size (approximate)
+      + Type (extension)
+      + Category (ok, not very good)
+      + Description
+      + Link Cover
+      + Link File download on site, no captua
+      + No edition - embedded within name of book
+      + No Publisher!
+    + Files
+      + Simple Link to File
+    + Search
+      + General search - not by field - by url API
+    + related
+      + A set related books
+*** LibgenIO - [[http://libgen.io/]]
+    + [[http://libgen.io/book/index.php?md5=6E9860A2C0A5AD5FB95E017DF3BE2DA4][Data]]
+      + Title (inc Subtitle)
+      + Authors
+      + ISBN
+      + Publisher
+      + Year
+      + Language
+      + Type (extension)
+      + Size (exact)
+      + Signature: MD% + others
+      + Added Date
+      + Edition
+      + Many Others
+      + Link Cover
+      + Links to Libgen.pw, Libgen.io, Gen.lib.rus.ec, Bookzz.org
+      + Permlink to file (md5)
+      + Which files older and worse?
+      + BibTex Info...
+      + Index by ID, MD5
+    + Search
+      + Complex Search API - including recently added
+      + Name
+      + MD5
+      + Or API  -return JSON
+    + File
+      + Simle Download link - link - no captchua
+*** libgen.pw 
+    + Awful search
+    + Data
+      + Title (no sub title?)
+      + Size (aprox)
+      + Authors
+      + Cover Link
+      + Direct Link Download
+    + Download
+      + Download - no captchua
+	+ 
+*** lib1.org (AKA Gen.lib.rus.ec)
+    + Download only, no search
+
+*** Bookzz.org
+    + Data
+      + Title (no subtitle)
+      + Authors
+      + Year
+      + Language
+      + ISBN
+      + Cover
+      + Type (extension)
+      + Pages
+      + Catagory: bad!
+    + Search
+      + Simple
+      + Advanced: Restract by year, Language, Extension
+      + By MD%, isbn?
+    + File
+      + Download - no captucha
+
+
+
+    
+      
+    
+    
+
+** Book Search Sites
+*** Amazon
+    + Data
+      + Title
+      + Language
+      + ISBN 10 & 13
+      + Publisher
+      + Author
+      + Pages
+      + Year
+      + Category (multiple)
+      
+    + Search
+    + related
+      + related, sponsered, buy instead
+
+    + 
+** Other Sites
+   + O'Reilly
+   + Barnes & Nobile
+   + OCLC Classify
+   + WorldCat
+   + Google Book
+   + GoodReads
+   + Safari Books
+   + Powell
+   + AbeBooks
+   + Library of Congress
+   + LibraryThing
+   + 
+
+* Ideas
+  + Match files Org with fixed
+  + For original files that are converted, watermark or no cover - look for better version on lib genesis.
+    Scan subset original files. Look and see how many same files on lib genesis. Download and check of better.
+    + Need detect watermark automatic
+    + Need detect if have cover automatic
+    + Need detect if converted automatic
+    + 
+
+
+
+* Design Database
+  + How do we handle a book with same md6 in multiple database?
+  + MD6 of a file is a "implementation" of a book
+  + Book has title, edition, etc - not extension or md6
+  + Implementation of book has unique md6, extension type, scanned or not, true pdf or not
+  + Do I need to store info on where book is or just a link to one good database?
+  + 
 
 * Things Manually Fixing
 ** General
